feat(ui): salon policy page
